--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
