--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/base": "^5.0.0-beta.59",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "async-mutex": "^0.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "uuid": "^11.0.2"
