--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "async-mutex": "^0.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-type-animation": "^3.2.0",
     "uuid": "^11.0.2"
   },
   "devDependencies": {
